--- a/index.html
+++ b/index.html
@@ -1,1 +1,120 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
+  <title></title>
+</head>
+
+<body>
+  <header>
+    <h1>The Code Review</h1>
+  </header>
+  <div>
+    <h2>Signup for our newsletter</h2>
+    <p>Get the latest news on how your code is doing right in your inbox</p>
+  </div>
+  <hr>
+  <hr>
+
+
+  <form action="" method="post">
+    <fieldset>
+      <legend>Contact Information</legend>
+
+      <div>
+        <label for="name">Full Name</label>
+        <input type="text" id="name" name="full_name" placeholder="Required">
+      </div>
+
+      <div>
+        <label for="mail">Email Address</label>
+        <input type="email" id="mail" name="user_mail" placeholder="Required">
+      </div>
+
+      <div>
+        <label for="phone">Phone Number</label>
+        <input type="tel" id="phone" name="user_number">
+      </div>
+
+      <div>
+        <label for="street">Street Address</label>
+        <input type="text" id="street" name="user_address">
+      </div>
+
+      <div>
+        <label for="city">City</label>
+        <input type="text" id="city" name="user_city">
+      </div>
+
+      <div>
+        <label for="state-select">state</label>
+
+        <select id="state-select" name="user_state">
+          <option value="">Choose State</option>
+          <option value="new-york">New York</option>
+          <option value="new-jersey">New Jersey</option>
+          <option value="connecticut">Connecticut</option>
+          <option value="massachusets">Massachusets</option>
+          <option value="mainer">Maine</option>
+          <option value="new-hampshire">New Hampshire</option>
+        </select>
+      </div>
+
+      <div>
+        <label for="zip">Zip Code</label>
+        <input type="text" id="zip" name="user_zip">
+      </div>
+    </fieldset>
+
+    <hr>
+    <fieldset>
+      <legend>Newsletter</legend>
+      <p>Select the newsletters you would like to recieve</p>
+
+      <div>
+        <label for="checkbox">HTML News</label>
+        <input type="checkbox" id="checkbox" name="news" value="html_news">
+      </div>
+
+      <div>
+        <label for="checkbox">CSS News</label>
+        <input type="checkbox" id="checkbox" name="news" value="css_news">
+      </div>
+
+      <div>
+        <label for="checkbox">Javascript News</label>
+        <input type="checkbox" id="checkbox" name="news" value="java_news">
+      </div>
+      <p>Newsletter format</p>
+
+      <div>
+        <label for="radio">HTML</label>
+        <input type="radio" id="radio" name="radio" value="html">
+      </div>
+      <div>
+        <label for="radio">Plain text</label>
+        <input type="radio" id="radio" name="radio" value="css">
+      </div>
+    </fieldset>
+
+    <div class="textarea">
+      <label for="other">Other topics you'd like to hear about</label>
+      <br>
+      <textarea id="other" name="other"></textarea>
+    </div>
+
+    <div class="btn">
+      <button type="button" name="button">Sign Up</button>
+
+    </div>
+    <h3><em>Copyright The Code Review</em></h3>
+
+  </form>
+
+</body>
+
+</html>
