--- a/index.html
+++ b/index.html
@@ -10,111 +10,117 @@
 </head>
 
 <body>
-  <header>
-    <h1>The Code Review</h1>
-  </header>
-  <div>
-    <h2>Signup for our newsletter</h2>
-    <p>Get the latest news on how your code is doing right in your inbox</p>
+
+  <div class="container">
+
+
+    <header>
+      <h1>The Code Review</h1>
+    </header>
+    <div class="signup">
+      <h2>Signup for our newsletter</h2>
+      <p class="info">Get the latest news on how your code is doing right in your inbox</p>
+    </div>
+
+
+
+    <form action="" method="post">
+      <fieldset>
+        <legend>Contact Information</legend>
+
+        <div>
+          <label class="topic" for="name">Full Name</label>
+          <input type="text" id="name" name="full_name" placeholder="Required">
+        </div>
+
+        <div>
+          <label class="topic" for="mail">Email Address</label>
+          <input type="email" id="mail" name="user_mail" placeholder="Required">
+        </div>
+
+        <div>
+          <label class="topic" for="phone">Phone Number</label>
+          <input type="tel" id="phone" name="user_number">
+        </div>
+
+        <div>
+          <label class="topic" for="street">Street Address</label>
+          <input type="text" id="street" name="user_address">
+        </div>
+
+        <div>
+          <label class="topic" for="city">City</label>
+          <input type="text" id="city" name="user_city">
+        </div>
+
+        <div>
+          <label class="topic" for="state-select">State</label>
+
+          <select id="state-select" name="user_state">
+            <option value="">Choose State</option>
+            <option value="new-york">New York</option>
+            <option value="new-jersey">New Jersey</option>
+            <option value="connecticut">Connecticut</option>
+            <option value="massachusets">Massachusets</option>
+            <option value="mainer">Maine</option>
+            <option value="new-hampshire">New Hampshire</option>
+          </select>
+        </div>
+
+        <div class="zipcode">
+          <label class="topic" for="zip">Zip Code</label><br>
+          <input type="text" id="zip" name="user_zip">
+        </div>
+      </fieldset>
+
+
+      <fieldset>
+        <legend>Newsletter</legend>
+        <p class="info">Select the newsletters you would like to recieve</p>
+
+        <div>
+          <input type="checkbox" id="checkbox" name="news" value="html_news">
+          <label class="topic" for="checkbox">HTML News</label>
+        </div>
+
+        <div>
+          <input type="checkbox" id="checkbox" name="news" value="css_news">
+          <label class="topic" for="checkbox">CSS News</label>
+        </div>
+
+        <div>
+          <input type="checkbox" id="checkbox" name="news" value="java_news">
+          <label class="topic" for="checkbox">Javascript News</label>
+        </div>
+
+        <p class="info">Newsletter format</p>
+
+        <div>
+          <input type="radio" id="radio" name="radio" value="html">
+          <label class="topic" for="radio">HTML</label>
+
+        </div>
+        <div>
+          <input type="radio" id="radio" name="radio" value="plain_text">
+          <label class="topic" for="radio">Plain text</label>
+
+        </div>
+      </fieldset>
+
+      <div class="textarea">
+        <label class="topic" for="other">Other topics you'd like to hear about</label>
+        <br>
+        <textarea id="other" name="other"></textarea>
+      </div>
+
+      <div class="btn">
+        <button type="button" name="button">Sign Up</button>
+
+      </div>
+      <h4 class="info"><em>Copyright The Code Review</em></h4>
+
+    </form>
   </div>
-  <hr>
-  <hr>
-
-
-  <form action="" method="post">
-    <fieldset>
-      <legend>Contact Information</legend>
-
-      <div>
-        <label for="name">Full Name</label>
-        <input type="text" id="name" name="full_name" placeholder="Required">
-      </div>
-
-      <div>
-        <label for="mail">Email Address</label>
-        <input type="email" id="mail" name="user_mail" placeholder="Required">
-      </div>
-
-      <div>
-        <label for="phone">Phone Number</label>
-        <input type="tel" id="phone" name="user_number">
-      </div>
-
-      <div>
-        <label for="street">Street Address</label>
-        <input type="text" id="street" name="user_address">
-      </div>
-
-      <div>
-        <label for="city">City</label>
-        <input type="text" id="city" name="user_city">
-      </div>
-
-      <div>
-        <label for="state-select">state</label>
-
-        <select id="state-select" name="user_state">
-          <option value="">Choose State</option>
-          <option value="new-york">New York</option>
-          <option value="new-jersey">New Jersey</option>
-          <option value="connecticut">Connecticut</option>
-          <option value="massachusets">Massachusets</option>
-          <option value="mainer">Maine</option>
-          <option value="new-hampshire">New Hampshire</option>
-        </select>
-      </div>
-
-      <div>
-        <label for="zip">Zip Code</label>
-        <input type="text" id="zip" name="user_zip">
-      </div>
-    </fieldset>
-
-    <hr>
-    <fieldset>
-      <legend>Newsletter</legend>
-      <p>Select the newsletters you would like to recieve</p>
-
-      <div>
-        <label for="checkbox">HTML News</label>
-        <input type="checkbox" id="checkbox" name="news" value="html_news">
-      </div>
-
-      <div>
-        <label for="checkbox">CSS News</label>
-        <input type="checkbox" id="checkbox" name="news" value="css_news">
-      </div>
-
-      <div>
-        <label for="checkbox">Javascript News</label>
-        <input type="checkbox" id="checkbox" name="news" value="java_news">
-      </div>
-      <p>Newsletter format</p>
-
-      <div>
-        <label for="radio">HTML</label>
-        <input type="radio" id="radio" name="radio" value="html">
-      </div>
-      <div>
-        <label for="radio">Plain text</label>
-        <input type="radio" id="radio" name="radio" value="css">
-      </div>
-    </fieldset>
-
-    <div class="textarea">
-      <label for="other">Other topics you'd like to hear about</label>
-      <br>
-      <textarea id="other" name="other"></textarea>
-    </div>
-
-    <div class="btn">
-      <button type="button" name="button">Sign Up</button>
-
-    </div>
-    <h3><em>Copyright The Code Review</em></h3>
-
-  </form>
-
 </body>
 
 </html>
