--- a/index.html
+++ b/index.html
@@ -15,46 +15,47 @@
 
 
     <header>
-      <h1>The Code Review</h1>
+      <h2>The Code Review</h2>
     </header>
+
     <div class="signup">
-      <h2>Signup for our newsletter</h2>
+      <h1>Signup for our newsletter</h1>
       <p class="info">Get the latest news on how your code is doing right in your inbox</p>
+      <hr class="thick">
+      <hr class="thin">
     </div>
 
-
-
     <form action="" method="post">
-      <fieldset>
+      <fieldset class="one">
         <legend>Contact Information</legend>
 
         <div>
-          <label class="topic" for="name">Full Name</label>
-          <input type="text" id="name" name="full_name" placeholder="Required">
+          <label for="name">Full Name</label>
+          <input required type="text" id="name" name="full_name" placeholder="Required">
         </div>
 
         <div>
-          <label class="topic" for="mail">Email Address</label>
-          <input type="email" id="mail" name="user_mail" placeholder="Required">
+          <label for="mail">Email Address</label>
+          <input required type="email" id="mail" name="user_mail" placeholder="Required">
         </div>
 
         <div>
-          <label class="topic" for="phone">Phone Number</label>
-          <input type="tel" id="phone" name="user_number">
+          <label for="phone">Phone Number</label>
+          <input required type="tel" id="phone" name="user_number" placeholder="Required">
         </div>
 
         <div>
-          <label class="topic" for="street">Street Address</label>
+          <label for="street">Street Address</label>
           <input type="text" id="street" name="user_address">
         </div>
 
         <div>
-          <label class="topic" for="city">City</label>
+          <label for="city">City</label>
           <input type="text" id="city" name="user_city">
         </div>
 
         <div>
-          <label class="topic" for="state-select">State</label>
+          <label for="state-select">State</label>
 
           <select id="state-select" name="user_state">
             <option value="">Choose State</option>
@@ -68,7 +69,7 @@
         </div>
 
         <div class="zipcode">
-          <label class="topic" for="zip">Zip Code</label><br>
+          <label for="zip">Zip Code</label><br>
           <input type="text" id="zip" name="user_zip">
         </div>
       </fieldset>
@@ -80,36 +81,36 @@
 
         <div>
           <input type="checkbox" id="checkbox" name="news" value="html_news">
-          <label class="topic" for="checkbox">HTML News</label>
+          <label for="checkbox">HTML News</label>
         </div>
 
         <div>
           <input type="checkbox" id="checkbox" name="news" value="css_news">
-          <label class="topic" for="checkbox">CSS News</label>
+          <label for="checkbox">CSS News</label>
         </div>
 
         <div>
           <input type="checkbox" id="checkbox" name="news" value="java_news">
-          <label class="topic" for="checkbox">Javascript News</label>
+          <label for="checkbox">Javascript News</label>
         </div>
 
         <p class="info">Newsletter format</p>
 
         <div>
           <input type="radio" id="radio" name="radio" value="html">
-          <label class="topic" for="radio">HTML</label>
+          <label for="radio">HTML</label>
 
         </div>
         <div>
           <input type="radio" id="radio" name="radio" value="plain_text">
-          <label class="topic" for="radio">Plain text</label>
+          <label for="radio">Plain text</label>
 
         </div>
       </fieldset>
 
       <div class="textarea">
-        <label class="topic" for="other">Other topics you'd like to hear about</label>
-        <br>
+        <label for="other">Other topics you'd like to hear about</label>
+
         <textarea id="other" name="other"></textarea>
       </div>
 
