changed button type and max-width

--- a/index.html
+++ b/index.html
@@ -104,21 +104,21 @@
           <label for="radio1">Plain text</label>
 
         </div>
+
+        <div class="textarea">
+          <label for="other">Other topics you'd like to hear about</label>
+
+          <textarea id="other" name="other"></textarea>
+        </div>
       </fieldset>
 
-      <div class="textarea">
-        <label for="other">Other topics you'd like to hear about</label>
 
-        <textarea id="other" name="other"></textarea>
-      </div>
 
       <div class="btn">
-        <button type="button" name="button">Sign Up</button>
-
+        <button type="submit" name="button">Sign Up</button>
       </div>
-      <h4 class="info"><em>Copyright The Code Review</em></h4>
-
     </form>
+    <h4 class="info"><em>Copyright The Code Review</em></h4>
   </div>
 </body>
 
