--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
 
         <div class="textarea">
-          <label for="other">Other topics you'd like to hear about</label>
+          <label class="other-topic" for="other">Other topics you'd like to hear about</label>
 
           <textarea id="other" name="other"></textarea>
         </div>
