validated code-fixed errors

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 
       <div class="btn">
-        <input type="submit" name="button" value"Sign Up">
+        <input type="submit" name="button" value="Sign Up">
       </div>
     </form>
     <h4 class="info"><em>Copyright The Code Review</em></h4>
